--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ name = "ai-chan"
 version = "0.1.0"
 [dependencies]
 failure = "*"
+log = "*"
+env_logger = "0.6.0"
 rocket = "*"
 rocket_contrib = "*"
 serde_json = "1.0"
