--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,13 @@ edition = "2018"
 name = "ai-chan"
 version = "0.1.0"
 [dependencies]
+dirs = "*"
+env_logger = "0.6.0"
 failure = "*"
 log = "*"
-env_logger = "0.6.0"
 rocket = "*"
 rocket_contrib = "*"
 serde = "*"
 serde_derive = "*"
 serde_json = "1.0"
+toml = "*"
