--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ version = "0.1.0"
 dirs = "*"
 env_logger = "0.6.0"
 failure = "*"
+futures = "*"
+hubcaps = "*"
 log = "*"
 rocket = "*"
 rocket_contrib = "*"
