--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ keywords = ["github-bot"]
 license-file = "LICENSE"
 readme = "README.md"
 repository = "https://github.com/k-nasa/ai-chan"
-description = "A helpful operation bot for GitHub. This helps to assign a reviewer, to merge a pull request, and to notify an unmergeable pull request with a comment as a command interactively."
+description = "A helpful operation bot for GitHub. It helps assign reviewers and merge pull requests."
 edition = "2018"
 
 [dependencies]
