--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,15 +10,15 @@ description = "A helpful operation bot for GitHub. It helps assign reviewers and
 edition = "2018"
 
 [dependencies]
-dirs = "*"
-failure = "*"
+dirs = "1.0"
+failure = "0.1"
 hubcaps = { git = "https://github.com/k-nasa/hubcaps" }
-log = "*"
-pretty_env_logger = "*"
-rocket = "*"
-rocket_contrib = "*"
-serde = "*"
-serde_derive = "*"
+log = "0.4"
+pretty_env_logger = "0.3"
+rocket = "0.4"
+rocket_contrib = "0.4"
+serde = "1.0"
+serde_derive = "1.0"
 serde_json = "1.0"
-tokio = "*"
-toml = "*"
+tokio = "0.1"
+toml = "0.4"
