--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2018"
 [dependencies]
 dirs = "1.0"
 failure = "0.1"
-hubcaps = { git = "https://github.com/k-nasa/hubcaps" }
+hubcaps = { git = "https://github.com/k-nasa/hubcaps", version="^0.5.0" }
 log = "0.4"
 pretty_env_logger = "0.3"
 rocket = "0.4"
