--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2018"
 
 [dependencies]
 tide = {git="https://github.com/rustasync/tide"}
+surf = { git = "https://github.com/rustasync/surf" }
 dirs = "2.0"
 failure = "0.1"
 log = "0.4"
